# Diary

./: .gitignore  LICENSE  README.md
.github/workflows/: rust.yml
backend/: .env  Cargo.toml
backend/src/: auth.rs  db.rs  errors.rs  main.rs  routes.rs
frontend/: .env  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  utils.ts
frontend/src/components/Diary/: Diary.tsx  styles.scss
frontend/src/components/Drawing/: Drawing.tsx  styles.scss
frontend/src/components/Header/: Header.tsx  styles.scss
frontend/src/components/Login/: Login.tsx  styles.scss
frontend/src/components/Register/: Register.tsx  styles.scss
