[package]
name = "Diary"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4.9.0"
actix-rt = "2.10"
actix-files = "0.6"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-cors = "0.7"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization & Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Security & Authentication
argon2 = "0.5"
rand_core = "0.6"
password-hash = "0.5"
jsonwebtoken = "9.3"

# Environment Variables
dotenv = "0.15"

# Cookies
cookie = "0.18"

# regex
regex = "1"
